<resources>
    <string name="app_name">Lab2</string>
    <string name="auth">Authorization</string>
    <string name="phone">Enter your Phone</string>
    <string name="name">Enter your Full Name</string>
    <string name="create_passwd">Create a Password</string>
    <string name="conf_passwd">Confirm your Password</string>
    <string name="enter_passwd">Enter your Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="getstarted">Get Started</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="projects">Projects</string>
    <string name="vendors">Vendors</string>
    <string name="notes">Notes</string>
    <string name="archive">Archive</string>
    <string name="deleted">Deleted</string>
    <string name="connections">Connections manager</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="admin_acc">Admin Account</string>
    <string name="admin_hint">Wrong button? Return to main page</string>
    <string name="dont_account_signup">Don\'t have an account? Sign up</string>
    <string name="dont_account_signin">Already have an account? Sign in</string>
    <string name="get_started">Get things started with \n Designer Planner</string>
    <string name="admin_log_in">Admin Log In</string>
</resources>