<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/account_admin" />

        <ImageView
            android:id="@+id/blue_circles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/blue_circles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/blue_circles"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:letterSpacing="0.15"
            android:text="@string/welcome_onboard"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            tools:text="+7-987-654-32-11" />

        <ImageView
            android:id="@+id/picture"
            android:layout_width="256dp"
            android:layout_height="162dp"
            android:layout_below="@id/number"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/board_with_notes" />

        <androidx.cardview.widget.CardView
            android:id="@+id/DELETED_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/picture"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:paddingStart="16dp"
                android:text="@string/deleted"
                android:textColor="@color/black"
                android:textSize="@dimen/buttons" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CONNECTIONS_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DELETED_BUTTON"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:paddingStart="16dp"
                android:text="@string/connections"
                android:textColor="@color/black"
                android:textSize="@dimen/buttons" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/NOTES_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CONNECTIONS_BUTTON"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:paddingStart="16dp"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="@dimen/buttons" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>